# testnet12Explorer

./: Cargo.toml  README.md  seeder.bat  seeder.sh  start-explorer.bat  start-explorer.sh
src/: main.rs
static/: index.html
static/css/: site.css
static/js/: site.js
