[package]
name = "kaspa-testnet12-explorer"
version = "0.1.0"
edition = "2021"
description = "Kaspa Testnet 12 Block Explorer - Standalone"

[dependencies]
kaspa-grpc-client = { git = "https://github.com/kaspanet/rusty-kaspa", branch = "master" }
kaspa-rpc-core = { git = "https://github.com/kaspanet/rusty-kaspa", branch = "master" }
kaspa-addresses = { git = "https://github.com/kaspanet/rusty-kaspa", branch = "master" }
kaspa-hashes = { git = "https://github.com/kaspanet/rusty-kaspa", branch = "master" }

tokio = { version = "1.33.0", features = ["full"] }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.107"
axum = "0.7.5"
tower = "0.5.1"
tower-http = { version = "0.5.2", features = ["cors", "fs"] }
clap = { version = "4.5.35", features = ["derive"] }
log = "0.4.20"
env_logger = "0.11.3"
anyhow = "1.0.86"
